<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/step1Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="Start Pomodoro"
        android:textSize="36dp">

    </TextView>

    <TextView
        android:id="@+id/step1description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Would you like to associate this Pomodoro with a Project?"
        android:layout_margin="10dp"
        android:textSize="18dp"
        android:layout_centerInParent="true">

    </TextView>

    <Spinner
        android:id="@+id/project_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/step1description"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">

    </Spinner>

    <Button
        android:id="@+id/start_pomodoro_to_step_2_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:onClick="startPomodoro"
        android:text="Start Pomodoro">

    </Button>

</RelativeLayout>